# sparse-ir-tutorial-v2

./: .buildinfo  Makefile  Project.toml  README.html  README.md  _config.yml  _toc.yml  genindex.html  index.html  index.md  objects.inv  pyproject.toml  register_julia_kernel.jl  regsiter_julia_kernel.py  search.html  searchindex.js  update_julia_notebooks.jl
.dev/devcontainer/: Dockerfile
.github/workflows/: deploy_book.yml
_sources/: README.md  index.md
_sources/src/: BgG_jl.ipynb  DLR_py.ipynb  DMFT_IPT_jl.ipynb  DMFT_IPT_py.ipynb  FLEX_jl.ipynb  TPSC_py.ipynb  analytic_continuation_py.ipynb  migration.md  orbital_magnetic_susceptibility_py.ipynb  second_order_perturbation_py.ipynb  sparse_sampling_demo_py.ipynb  (+1 more)
src/: BgG_jl.html  BgG_jl.ipynb  DLR.html  DLR_jl.html  DLR_jl.ipynb  DLR_py.html  DLR_py.ipynb  DMFT_IPT_jl.html  DMFT_IPT_jl.ipynb  DMFT_IPT_py.html  DMFT_IPT_py.ipynb  FLEX_jl.html  FLEX_jl.ipynb  FLEX_py.html  FLEX_py.ipynb  GW_py.html  GW_py.ipynb  IR_py.html  IR_py.ipynb  TPSC_py.html  TPSC_py.ipynb  additional_material.html  analytic_continuation_py.html  api.html  bibliography.html  citation.html  eliashberg_holstein_py.html  eliashberg_holstein_py.ipynb  liechtenstein_py.html  liechtenstein_py.ipynb  matsubarasum.html  migration.html  migration.md  orbital_magnetic_susceptibility_py.html  orbital_magnetic_susceptibility_py.ipynb  second_order_perturbation_fort.html  second_order_perturbation_py.html  sparse_sampling_demo_jl.html  sparse_sampling_demo_jl.ipynb  sparse_sampling_demo_py.html  (+9 more)
src_disabled/: DLR_jl.ipynb  transformation_py.ipynb
(+322 files in other folders)
