[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sparse-ir-tutorial"
version = "0.1.0"
description = "Sparse IR Tutorial"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "matplotlib",
    "sparse-ir==2.0.0a4",
]

[project.optional-dependencies]
dev = [
    "jupyter",
    "jupyterlab",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
