[project]
name = "sparse-ir-tutorial"
version = "0.1.0"
dependencies = [
    "jupyter-book",
    "jupytext",
    "matplotlib",
    "ghp-import",
    "jupyterlab",
    "sparse-ir",
    "admmsolver",
    "pylibsparseir",
]

[tool.uv.sources]
sparse-ir = { path = "../sparse-ir/dist/sparse_ir-2.0.0a4-py3-none-any.whl" }
pylibsparseir = { path = "../libsparseir/python/dist/pylibsparseir-0.5.2-cp313-cp313-macosx_15_0_arm64.whl" }
